src/objects/MM_Spendings__c.object
<CustomObject>
    <fields>
        <fullName>Average_Monthly_Currency_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Average Monthly Currency History</label>
        <referenceTo>Average_Monthly_Currency_History__c</referenceTo>
        <relationshipLabel>Media Manager Spendings</relationshipLabel>
        <relationshipName>Media_Manager_Spendings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BypassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Media Manager Spendings</relationshipLabel>
        <relationshipName>Media_Manager_Spendings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <label>Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Media_Spend__c</fullName>
        <label>Media Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Platform</label>
        <referenceTo>Platform__c</referenceTo>
        <relationshipLabel>Media Manager Spendings</relationshipLabel>
        <relationshipName>MediaManagerSpendings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StrikeId__c</fullName>
        <label>Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strike_ID__c</fullName>
        <formula>Platform__r.Prefix__c + Contract__r.Project_ID__c</formula>
        <label>Strike ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdWords</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>DV360</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <formula>StrikeId__c &amp; &apos;_&apos; &amp; Contract__c &amp; &apos;_&apos; &amp; TEXT(Date__c) &amp; &apos;_&apos; &amp; TEXT(Delivered__c) &amp; &apos;_&apos; &amp; IF( 
BEGINS(TEXT(Media_Spend__c), &apos;.&apos;), 
&apos;0&apos; &amp; TEXT(Media_Spend__c), 
IF(CONTAINS(TEXT(Media_Spend__c), &apos;.&apos;), 
TEXT(Media_Spend__c) , 
TEXT(Media_Spend__c) &amp; &apos;.0&apos; ) 
) &amp; &apos;_&apos; &amp; IF(Is_Sync__c, &apos;1&apos;, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>summarized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>summarized</label>
        <type>Checkbox</type>
    </fields>
    <label>Media Manager Spendings</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Media Manager Spendings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Manager Spendings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotEditDate</fullName>
        <active>true</active>
        <description>Date is not editable</description>
        <errorConditionFormula>PRIORVALUE( Date__c ) != Date__c</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Date is not editable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_ID_REGEX</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp;
!PRIORVALUE(BypassValidationRule__c) &amp;&amp;
NOT(REGEX( StrikeId__c, &apos;[a-zA-Z]{2}[0-9]{6}[a-zA-Z]?&apos;))</errorConditionFormula>
        <errorDisplayField>StrikeId__c</errorDisplayField>
        <errorMessage>Incorrect Project ID format</errorMessage>
    </validationRules>
</CustomObject>